[gd_scene load_steps=5 format=3 uid="uid://r1rrg8ym4g3m"]

[ext_resource type="PackedScene" uid="uid://d31t54vrirjno" path="res://Game/Scenes/Worlds/world.tscn" id="1_jj4mk"]
[ext_resource type="Script" path="res://Game/Scenes/Worlds/LevelWorlds/level_world.gd" id="2_o12sb"]
[ext_resource type="PackedScene" uid="uid://de7ejq00742e3" path="res://Game/Scenes/Entities/Players/player.tscn" id="3_db14h"]
[ext_resource type="PackedScene" uid="uid://csmysx17evp1d" path="res://Game/Scenes/LevelEnd/level_end.tscn" id="3_ty3ta"]

[node name="LevelWorld" instance=ExtResource("1_jj4mk")]
script = ExtResource("2_o12sb")

[node name="LevelEnd" parent="." index="1" instance=ExtResource("3_ty3ta")]
position = Vector2(1392, 13)

[node name="Player" parent="Entities" index="0" instance=ExtResource("3_db14h")]

[connection signal="level_completed" from="LevelEnd" to="." method="_on_level_end_level_completed"]
